kubernetes/apps/excalidraw/ingress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: excalidraw
  namespace: excalidraw
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`draw.pxldi.de`)
      middlewares:
        - name: internal-only
          namespace: traefik
        - name: authentik-forward-auth
          namespace: traefik
      services:
        - name: excalidraw
          port: 80
